fix vertical alignment of facet filters and table results

--- a/webapps/pam/public/stylesheets/style.css
+++ b/webapps/pam/public/stylesheets/style.css
@@ -107,6 +107,10 @@ h4 {
     margin: 0;
 }
 
+#facetview_filters {
+    padding-top: 58px !important;
+}
+
 .facetview_facetrange {
     display:none;
 }
